crates/inertia-macros/tests/ui/fail/missing_redacted_field.rs
use inertia_macros::InertiaForm;

#[derive(InertiaForm)]
#[inertia(old_input, redact = "password")]
struct Invalid { value: String }

fn main() {}
